--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,22 @@
   <!-- Bootstrap CSS -->
   <link href="../bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
-  
   <link rel="stylesheet" href="style.css">
-  
+  <!-- Typed.js for text animations -->
+  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+
 </head>
 <body>
 
 <!-- Sidebar -->
 <nav class="sidebar d-none d-md-block">
-  <img src="images/LebronAi.webp" alt="Avatar" class="img-fluid mb-3">
+  <img src="images/ferrari.jpg" alt="Avatar" class="img-fluid mb-3">
   <a href="#home" class="active">HOME</a>
   <a href="#about">ABOUT</a>
-  <a href="#photos">PHOTOS</a>
+  <a href="#projects">PROJECTS</a>
+  <a href="#now-playing">NOW PLAYING</a>
   <a href="#contact">CONTACT</a>
+  <button id="dark-mode-toggle" class="btn btn-secondary mt-3">Toggle Dark Mode</button>
 </nav>
 
 <!-- Navbar for small screens -->
@@ -28,8 +31,10 @@
     <div class="navbar-nav w-100 justify-content-around">
       <a class="nav-link" href="#home">HOME</a>
       <a class="nav-link" href="#about">ABOUT</a>
-      <a class="nav-link" href="#photos">PHOTOS</a>
+      <a class="nav-link" href="#projects">PROJECTS</a>
+      <a class="nav-link" href="#now-playing">NOW PLAYING</a>
       <a class="nav-link" href="#contact">CONTACT</a>
+      <button id="dark-mode-toggle-mobile" class="btn btn-secondary">Toggle Dark Mode</button>
     </div>
   </div>
 </nav>
@@ -37,60 +42,64 @@
 <!-- Main Content -->
 <div class="main-content">
   <!-- Header/Home -->
-  <header class="text-center py-5" id="home">
-    <h1 class="display-1">I'm Bohdan.</h1>
-    <p class="lead">Web developer. Богом дан.</p>
-    <img id="leadphoto"  src="images/meSobor.jpg" alt="Bohdan" class="img-fluid">
-  </header>
+<header class="text-center py-5" id="home">
+  <h1 class="display-1">I'm Bohdan.</h1>
+  <p class="lead"><span id="typed"></span></p>
+  <!-- Add data-src for lazy loading -->
+  <img id="leadphoto" data-src="images/meSobor.jpg" alt="Bohdan" class="img-fluid lazy">
+</header>
 
   <!-- About Section -->
   <section class="container py-5" id="about">
     <h2 class="text-light">Bohdan Bailema</h2>
-    <hr class="w-25">
+    <hr class="w-50">
     <p>A 18-year-old (maybe 17) computer science student and enthusiast passionate about coding, problem-solving, and exploring the latest tech innovations. This is a simple website about me.</p>
-    
+
     <h3 class="text-light mt-5">My Skills</h3>
+    <hr class="w-25">
     <p class="mb-1">Web Design</p>
     <div class="skill-bar">
-      <div class="skill-level" style="width: 45%;"></div>
+      <div class="skill-level" data-width= "45%"></div>
     </div>
     <p class="mb-1">Software Development</p>
     <div class="skill-bar">
-      <div class="skill-level" style="width: 22%;"></div>
+      <div class="skill-level" data-width= "22%"></div>
     </div>
-    <p class="mb-1">Cybersicurity</p>
+    <p class="mb-1">Cybersecurity</p>
     <div class="skill-bar">
-      <div class="skill-level" style="width: 3%;"></div>
+      <div class="skill-level" data-width= "3%"></div>
     </div>
     <p class="mb-1">Brawl Stars</p>
     <div class="skill-bar">
-      <div class="skill-level" style="width: 92%;"></div>
+      <div class="skill-level" data-width= "92%"></div>
     </div>
     <p class="mb-1">Hardware knowledge</p>
     <div class="skill-bar">
-      <div class="skill-level" style="width: 20%;"></div>
+      <div class="skill-level" data-width= "20%"></div>
     </div>
 
-    <div class="row text-center my-5">
-      <div class="col-3">
-        <span class="display-6">2+</span><br>Partners
-      </div>
-      <div class="col-3">
-        <span class="display-6">1+</span><br>Projects Done
-      </div>
-      <div class="col-3">
-        <span class="display-6">2+</span><br>Happy Clients
-      </div>
-      <div class="col-3">
-        <span class="display-6">11+</span><br>Meetings
-      </div>
-    </div>
+    <!-- Stats Section -->
+<div class="row text-center my-5" id="stats">
+  <div class="col-3">
+    <span class="display-6 stats-value" data-target="2">100+</span><br>Partners
+  </div>
+  <div class="col-3">
+    <span class="display-6 stats-value" data-target="1">100+</span><br>Projects Done
+  </div>
+  <div class="col-3">
+    <span class="display-6 stats-value" data-target="1">100+</span><br>Happy Clients
+  </div>
+  <div class="col-3">
+    <span class="display-6 stats-value" data-target="11">100+</span><br>Meetings
+  </div>
+</div>
 
     <button class="btn btn-light btn-lg">
       <i class="bi bi-download"></i> Download Resume
     </button>
 
     <h3 class="text-light mt-5">My Price</h3>
+    <hr class="w-25">
     <div class="row">
       <div class="col-md-6">
         <div class="card bg-dark text-white mb-3">
@@ -129,44 +138,64 @@
           </div>
         </div>
       </div>
-    </div>
+      
 
     <h3 class="text-light mt-5">My Reputation</h3>
+    <hr class="w-25">
     <div class="d-flex align-items-center my-4">
-      <img src="/w3images/bandmember.jpg" alt="Avatar" class="rounded-circle me-3" style="width: 80px;">
+      <img src="images/LebronAi.webp" alt="Avatar" class="rounded-circle me-3" style="width: 80px;">
       <div>
-        <p class="mb-0"><strong>Chris Fox.</strong> CEO at Mighty Schools.</p>
-        <p>John Doe saved us from a web disaster.</p>
+        <p class="mb-0"><strong>Franklin Fox.</strong> CEO at Mighty Schools.</p><br>
+        <p>Bohdan saved us from a web disaster.</p>
       </div>
     </div>
     <div class="d-flex align-items-center my-4">
-      <img src="/w3images/avatar_g2.jpg" alt="Avatar" class="rounded-circle me-3" style="width: 80px;">
+      <img src="images/kaua.jpg" alt="Avatar" class="rounded-circle me-3" style="width: 80px; height: 80px; ">
       <div>
-        <p class="mb-0"><strong>Rebecca Flex.</strong> CEO at Company.</p>
-        <p>No one is better than John Doe.</p>
+        <p class="mb-0"><strong>Kaua Campus.</strong> CEO at Company.</p><br>
+        <p>No one is better than Bohdan Bailema.</p>
       </div>
     </div>
   </section>
-
-  <!-- Portfolio Section -->
-  <section class="container py-5" id="photos">
-    <h2 class="text-light">My Photos</h2>
+  <!-- Projects Section -->
+  <section class="container py-5" id="projects">
+    <h2 class="text-light">Projects</h2>
     <hr class="w-25">
     <div class="row">
       <div class="col-md-6">
-        <img src="/w3images/wedding.jpg" class="img-fluid mb-3">
-        <img src="/w3images/rocks.jpg" class="img-fluid mb-3">
-        <img src="/w3images/sailboat.jpg" class="img-fluid mb-3">
-      </div>
-      <div class="col-md-6">
-        <img src="/w3images/underwater.jpg" class="img-fluid mb-3">
-        <img src="/w3images/chef.jpg" class="img-fluid mb-3">
-        <img src="/w3images/wedding.jpg" class="img-fluid mb-3">
-        <img src="/w3images/p6.jpg" class="img-fluid mb-3">
+        <div class="card bg-dark text-white mb-3">
+          <div class="card-header bg-secondary py-4">
+            <h4 class="card-title">Revenue Radar</h4>
+          </div>
+          <div class="card-body">
+            <p>A project to track and analyze revenue streams.</p>
+            <a href="https://github.com/yourusername/revenue-radar" class="btn btn-light">GitHub Repository</a>
+            <a href="https://www.npmjs.com/package/revenue-radar" class="btn btn-light mt-2">NPM Package</a>
+          </div>
+        </div>
       </div>
     </div>
   </section>
-
+  <!-- Now Playing Section -->
+  <section class="container py-5" id="now-playing">
+    <h2 class="text-light">Now Playing</h2>
+    <hr class="w-25">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card bg-dark text-white mb-3">
+          <div class="card-header bg-secondary py-4">
+            <h4 class="card-title">Current Favorite Track</h4>
+          </div>
+          <div class="card-body">
+            <p><strong>Song:</strong> Bohemian Rhapsody</p>
+            <p><strong>Artist:</strong> Queen</p>
+            <a href="https://open.spotify.com/track/4u7EnebtmKWzUH433cf5Qv" class="btn btn-light">Listen on Spotify</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
   <!-- Contact Section -->
   <section class="container py-5" id="contact">
     <h2 class="text-light">Contact Me</h2>
@@ -195,8 +224,8 @@
     </form>
   </section>
 
-  <!-- Footer -->
-  <footer class="container py-5 text-center">
+   <!-- Footer -->
+   <footer class="container py-5 text-center">
     <i class="bi bi-facebook me-3"></i>
     <i class="bi bi-instagram me-3"></i>
     <i class="bi bi-snapchat me-3"></i>
@@ -207,7 +236,9 @@
   </footer>
 </div>
 
+
 <!-- Bootstrap JS -->
 <script src="../bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
