--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <title>About Me</title>
   <link rel="icon" type="image/x-icon"  href="images/uzbekbanana.jpg">
   <!-- Bootstrap CSS -->
-  <link href="../bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link rel="stylesheet" href="style.css">
   <!-- Typed.js for text animations -->
@@ -322,7 +322,7 @@
 
 
 <!-- Bootstrap JS -->
-<script src="../bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+<script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
 <script src="script.js"></script>
 
 </body>
